--- a/components/News/Event.module.scss
+++ b/components/News/Event.module.scss
@@ -3,8 +3,9 @@
   justify-content: space-between;
   padding: 45px;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 120px);
   background-color: #e5e5e5;
+  overflow-y: scroll;
 }
 
 .alertBG {
@@ -19,6 +20,8 @@
 .alert {
   padding: 10px;
   position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -43,9 +46,9 @@
     font-size: 12px;
     line-height: 15px;
     padding: 6px;
-    color: #ffffff;
     margin-top: 22px;
     padding-top: 4px;
+    margin-right: 10px;
   }
 
   h1 {
@@ -63,6 +66,7 @@
   padding: 35px;
   background: #ffffff;
   border-radius: 8px;
+  height: 100vh;
 
   h2 {
     margin-bottom: 25px;
@@ -77,7 +81,7 @@
   li::before {
     position: absolute;
     left: 0;
-    top: 0;
+    top: 6px;
     width: 10px;
     height: 10px;
     content: '';
@@ -136,4 +140,9 @@
       margin: 0 5px;
     }
   }
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
 }
